--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,12 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.data:spring-data-rest-hal-browser')
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
 	compile('org.springframework.boot:spring-boot-starter-validation')
+	compile group: 'com.github.fakemongo', name: 'fongo', version: '2.0.6'
+	compile group: 'javax.persistence', name: 'persistence-api', version: '1.0.2'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
