--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-validation')
 	compile group: 'com.github.fakemongo', name: 'fongo', version: '2.0.6'
 	compile group: 'javax.persistence', name: 'persistence-api', version: '1.0.2'
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
