changed lengthInSecs to boxed equivalent. added test case for controller

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	compile group: 'com.github.fakemongo', name: 'fongo', version: '2.0.6'
 	compile group: 'javax.persistence', name: 'persistence-api', version: '1.0.2'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile group: 'org.assertj', name: 'assertj-core', version: '3.5.2'
+	testCompile group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
+	testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.9.0'
 }
