added test cases for controller, saveAll cannot be tested due to gson problem

--- a/build.gradle
+++ b/build.gradle
@@ -40,4 +40,5 @@ dependencies {
 	testCompile group: 'org.assertj', name: 'assertj-core', version: '3.5.2'
 	testCompile group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
 	testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.9.0'
+	testCompile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 }
